a list of indentifiers referring to the people who contributed
that particular item. When more than one person is listed the person
who contributed the patch or idea appears first, followed by
those who've otherwise worked on that item. For a list of 
contributors names and identifiers please see the CONTRIBUTORS file.

Changes from 2.3.2 to 2.4.0:

 - Add quick summary option that skips byte-for-byte match confirmation.
 - Reduce number of progress indicator updates for better performance.

Changes from 2.3.1 to 2.3.2:

 - Keep cursor as close to current group as possible after deleting files.
 - Omit endian.h when building on AIX.

Changes from 2.3.0 to 2.3.1:

 - Fix buffer overflow bug in getrealpath() function.

Changes from 2.2.1 to 2.3.0:

 - Add --cache option to speed up file comparisons.
 - Use nanosecond precision for file times, if available.
 - Fix compilation issue on OpenBSD.
 - Other changes like fixing typos, wording, etc.

Changes from 2.2.0 to 2.2.1:

 - Fix bug in code meant to skip over the current log file when --log
   option is given.
 - Updates to copyright notices in source code.

Changes from 2.1.2 to 2.2.0:

 - Add --deferconfirmation option.
 - Check that files marked as duplicates haven't changed during program
   execution before deleting them.
 - Update documentation to indicate units for SIZE in command-line options.
 - Move some configuration settings to configure.ac file.

Changes from 2.1.1 to 2.1.2:

 - Do not enter ncurses mode when --immediate option given.
 - Fix logging/memory corruption bug when using --log with --immediate.

Changes from 2.1.0 to 2.1.1:

 - Break mtime ties using ctime when sorting by time.
 - Reduce number of calls to stat(), for speed.
 - Clear last command status when new command is entered.

Changes from 2.0.0 to 2.1.0:

 - Rename cs command ("clear all selections") from cs to csel.
 - Rename igs command ("invert selections") from igs to isel.
 - Add "prune" command as synonym for DELETE key.