@@ -49,9 +49,10 @@ Usage: fdupes [options] DIRECTORY...
                          with -s or --symlinks, or when specifying a
                          particular directory more than once; refer to the
                          fdupes documentation for additional information
- -D --deferconfirmation  in interactive mode, defer byte-for-byte confirmation
-                         of duplicates until just before file deletion
- -P --plain              with --delete, use line-based prompt (as with older
+-D --deferconfirmation  in interactive mode, defer byte-for-byte confirmation
+                        of duplicates until just before file deletion
+-e --heuristic         use heuristic hashing for large files
+-P --plain              with --delete, use line-based prompt (as with older
                          versions of fdupes) instead of screen-mode interface
  -N --noprompt           together with --delete, preserve the first file in
                          each set of duplicates and delete the rest without
